--- a/style.css
+++ b/style.css
@@ -15,8 +15,8 @@
 .container {
   display: flex;
   flex-direction: row;
-  gap: 100px;
-  justify-content: space-between;
+  gap: 60px;
+  justify-content: center;
   min-height: 100vh;
   margin: 50px;
 }
@@ -25,8 +25,8 @@
   position: -webkit-sticky;
   position: sticky;
   top: 0;
-  width: 60%;
-  height: 900px;
+  width: 80%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
